--- a/views/app/badyet.ejs
+++ b/views/app/badyet.ejs
@@ -91,14 +91,14 @@
                         <% categories.forEach(( category, index ) => { %>
                                         
                                 <div class="data-item">
-
+                                        <h5>Insid Category: <%= index %></h5>
                                         <div class="col-12 income-header">
                                             <div class="row">
                                                 <div class="col-6">
                                                         <span class="">
                                                             <span class="income-header-income"><%= category.title %></span>
                                                         </span>
-                                                        <a role="button" data-toggle="collapse" class="btn no-focus" href="#collapseExample"><i class="fas fa-caret-up"></i></a>
+                                                        <a role="button" data-toggle="collapse" class="btn no-focus" href="#collapseExample-<%= category.id %>"><i class="fas fa-caret-up"></i></a>
                                                 </div>
                                                 <div class="col-6">
                                                     <div class="row text-right income-header-pr-text">
@@ -107,10 +107,30 @@
                                                     </div>
                                                 </div>
                                             </div>
-
                                         </div>
 
-                                        <div class="collapse show" id="collapseExample">
+                                        <!-- data here -->
+                                     <% categoriesItems.forEach(( item, index ) => { %>  
+                                        <h5>Insid Item: <%= index %></h5>
+                                        <div class="collapse show" id="collapseExample-<%= category.id %>">
+                                            <div class="card card-body">
+                                                <div class="row">
+                                                    <div class="col-6">
+                                                        <span class="income-header-income"><%= item.label %></span>      
+                                                    </div>
+                                                    <div class="col-6">
+                                                        <div class="row text-right income-header-pr-text">
+                                                            <div class="col-6">$<%= item.planned %></div>
+                                                            <div class="col-6">$<%= item.spend %></div>
+                                                        </div>
+                                                    </div>
+                                                </div>          
+                                            </div>
+                                        </div>
+
+                                    <% }) %>
+
+                                        <div class="collapse show" id="collapseExample-<%= category.id %>">
                                                 <div class="card card-body btn-add-paycheck">
                                                     <div class="row">
                                                         <div class="col-6">
@@ -125,9 +145,8 @@
                                                     </div>        
                                                 </div>
                                             </div>
-                                        </div>
-                
-                                </div>
+                                    </div>                
+                              
                                            
                         <% }) %>   
 
