--- a/views/app/_categories.ejs
+++ b/views/app/_categories.ejs
@@ -6,7 +6,7 @@
                             <span class="">
                                 <span class="income-header-income"><%= category.title %></span>
                             </span>
-                            <a role="button" data-toggle="collapse" class="btn no-focus" href="#collapseExample-<%= category.id %>"><i class="fas fa-caret-up"></i></a>
+                            <a role="button" data-toggle="collapse" class="btn no-focus clicker" href="#collapseExample-<%= category.id %>"><i class="fas fa-caret-up"></i></a>
                     </div>
                     <div class="col-6">
                         <div class="row text-right income-header-pr-text">
@@ -46,8 +46,8 @@
                         </div>
                         <div class="col-6">
                             <div class="row text-right income-header-pr-text">
-                                <div class="col-6">$0.00</div>
-                                <div class="col-6">$0.00</div>
+                                <div class="col-6"></div>
+                                <div class="col-6"></div>
                             </div>
                         </div>
                     </div>        
