--- a/views/app/_incomes.ejs
+++ b/views/app/_incomes.ejs
@@ -8,7 +8,7 @@
                         <span class="income-header-income">Income</span>
                         <span class="income-header-month"><small>for</small><%= income.month %></span>
                     </span>
-                    <a role="button" data-toggle="collapse" class="btn no-focus" href="#collapseExample1"><i class="fas fa-caret-up"></i></a>
+                    <a role="button" data-toggle="collapse" class="btn no-focus clicker" href="#collapseExample1"><i class="fas fa-caret-up"></i></a>
             </div>
             <div class="col-6">
                 <div class="row text-right income-header-pr-text">
