--- a/views/app/badyet.ejs
+++ b/views/app/badyet.ejs
@@ -12,30 +12,30 @@
                 </div>
 
                 <div class="row main-data">
-                    <div class="col">
+                    <div class="col category-list">
                         
                         <%- include('_incomes.ejs', { income: income }) %>
 
                         <% if( !categories ) { %>                                     
-                            <div class="data-item">
+                            <div class="data-item removable-category">
                                 <div class="col-12 income-header">
                                     <div class="row">
                                         <div class="col-6">
                                                 <span class="">
                                                     <span class="income-header-income">UNTITLED</span>
                                                 </span>
-                                                <a role="button" data-toggle="collapse" class="btn no-focus" href="#collapseExample1"><i class="fas fa-caret-up"></i></a>
+                                                <a role="button" data-toggle="collapse" class="btn no-focus" href="#collapseExample"><i class="fas fa-caret-up"></i></a>
                                         </div>
                                         <div class="col-6">
                                             <div class="row text-right income-header-pr-text">
                                                 <div class="col-6">Planned</div>
-                                                <div class="col-6">Received</div>
+                                                <div class="col-6">Remaining</div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
 
-                                <div class="collapse show" id="collapseExample1">
+                                <div class="collapse show" id="collapseExample">
                                     <div class="card card-body btn-add-paycheck">
                                         <div class="row">
                                             <div class="col-6">
@@ -54,8 +54,11 @@
                 
                 <div class="row main-data main-data-category">
                     <div class="col">                                
-                        <div class="data-item add-group-category">    
-                           <button role="button" data-toggle="" id="add-category-button" class="btn no-focus" href="#"><i class="fas fa-plus btn-add-paycheck-adder"></i><span>ADD GROUP</span></button> 
+                        <div class="data-item add-group-category"> 
+                            <input type="hidden" class="income_id" value="<%= income.id %>" name="incomeId">   
+                            <input type="hidden" class="user_id" value="<%= currentUserId %>" name="userId">
+                            <input type="hidden" class="csrf_token" name="_csrf" value="<%#= csrfToken %>">    
+                            <button role="button" data-toggle="" id="add-category-button" class="btn no-focus" href="#"><i class="fas fa-plus btn-add-paycheck-adder"></i><span>ADD GROUP</span></button> 
                         </div>                                 
                     </div>
                 </div>         
@@ -69,5 +72,4 @@
 
 <script src="/dist/jquery.min.js"></script>
 <script src="/dist/js/bootstrap.min.js"></script> 
-<script src="/js/badyet.js"></script>
 <%- include('../layouts/footer.ejs') %>
