--- a/views/layouts/script.ejs
+++ b/views/layouts/script.ejs
@@ -1,6 +1,6 @@
 <script src="/dist/jquery.min.js"></script>
 <script src="/dist/js/bootstrap.min.js"></script>
 
-<% if (signInJs) { %>
+<!-- <%# if (signInJs) { %>
 <script src="/js/app.js"></script>
-<% } %>    
+<%# } %>     -->
