--- a/views/app/_incomes.ejs
+++ b/views/app/_incomes.ejs
@@ -44,6 +44,7 @@
         <div class="card card-body">
             <div class="row">
                 <div class="col-6">
+                    <input type="hidden" class="income_category_id" value="<%= income.category_id %>"> 
                     <a role="button" data-toggle="" class="btn no-focus btn-add-items" id="add-income-item-button" href="#"><i class="fas fa-plus btn-add-paycheck-adder"></i> Add Paycheck</a>  
                 </div>
                 <div class="col-6">
