--- a/views/app/badyet.ejs
+++ b/views/app/badyet.ejs
@@ -46,8 +46,9 @@
                                 </div>
                             </div>
                         <% } else { %>
-
-                            <%- include('_categories.ejs', { categories: categories }) %>
+                            <div class="categories-list">
+                                <%- include('_categories.ejs', { categories: categories }) %>
+                            </div>
                         <% } %>                                
                     </div>
                 </div> 
@@ -55,7 +56,6 @@
                 <div class="row main-data main-data-category">
                     <div class="col">                                
                         <div class="data-item add-group-category">
-                            <input type="hidden" class="income_category_id" value="<%= income.category_id %>"> 
                             <input type="hidden" class="income_id" value="<%= income.id %>">   
                             <input type="hidden" class="user_id" value="<%= currentUserId %>">
                             <input type="hidden" class="csrf_token" name="_csrf" value="<%#= csrfToken %>">    
